Created the models and the interface for the requests
