# docs/swagger.json
@@ -13,6 +13,32 @@
     "host": "localhost:8000",
     "basePath": "/api/v1",
     "paths": {
+        "/health": {
+            "get": {
+                "description": "Responds with a hello message from the Product Controller",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Status"
+                ],
+                "summary": "Greets from Product Controller",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/image": {
             "post": {
                 "description": "Upload an image to MinIO bucket \"imagens\"",
@@ -190,32 +216,6 @@
                     }
                 ],
                 "responses": {}
-            }
-        },
-        "/status/health": {
-            "get": {
-                "description": "Responds with a hello message from the Product Controller",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Status"
-                ],
-                "summary": "Greets from Product Controller",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
             }
         }
     },
